# bots-edi-k8s

./: .dockerignore  .gitignore  .markdown-link-check.json  .yamllint.yml  CONTRIBUTING.md  Dockerfile  README.md  entrypoint.sh
bots/: .gitignore  .gitlab-ci.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.md  MANIFEST.in  Makefile  README.rst  pyproject.toml
bots/bots/: __about__.py  __init__.py  admin.py  apachewebserver.py  apps.py  automaticmaintenance.py  bots_context.py  botsconfig.py  botsglobal.py  botsinit.py  botslib.py  botssqlite.py  botsupdatedb.py  cleanup.py  communication.py  configure.py  dirmonitor.py  engine.py  engine2.py  envelope.py  exceptions.py  forms.py  grammar.py  grammarcheck.py  healthcheck.py  inmessage.py  job2queue.py  jobqueueserver.py  message.py  models.py  node.py  outmessage.py  pluglib.py  plugmanager.py  preprocess.py  py2html.py  router.py  transform.py  urls.py  validate_email.py  (+4 more)
bots/bots/config/: bots.ini
bots/bots/install/: bots.ini  botsdb  settings.py
bots/bots/locale/fr/LC_MESSAGES/: django.po
bots/bots/locale/nl/LC_MESSAGES/: django.po
bots/bots/management/commands/: initdb.py
bots/bots/migrations/: 0001_initial.py  0002_channel_add_debug.py  0002_channel_alter_auth_256.py  0002_channel_alter_inorout_3.py  0002_filereport_alter_divtext_rsrv1_128.py  0002_report_alter_rsrv1_256.py  0002_routes_add_dirmonitor.py  0003_merge.py
bots/bots/sql/: mutex.postgresql.sql  mutex.sqlite.sql  persist.mysql.sql  persist.sqlite.sql  ta.mysql.sql  ta.postgresql.sql  ta.sqlite.sql  uniek.sql
bots/bots/static/admin/js/: bots.js
bots/bots/static/css/: bots-filer.css  bots-icons.css  bots-logfiler.css  bots-nav.css  bots-srcfiler.css  bots.css  bots_responsive.css  login.css
bots/bots/static/js/: bots.datetimepicker.js  bots.filer.js  bots.js  bots.staff.js  botstable.js
bots/bots/templates/: 403.html  403_csrf.html
bots/bots/templates/admin/: base.html  base_site.html  change_list.html  index.html  login.html  submit_line.html  svgs.html
bots/bots/templates/bots/: about.html  base.html  botslogo.html  button_back.html  button_back_close.html  button_cancel.html  button_cancel_close.html  button_close.html  button_close_right.html  confirm.html  delete.html  detail.html  document.html  filer.html  fontsizer.html  incoming.html  logfiler.html  menu.html  outgoing.html  paginator.html  plugin.html  plugin_index.html  plugout.html  process.html  refresh.html  reports.html  selectform.html  srcfiler.html  ta_errortext.html  ta_info.html
bots/bots/templates/registration/: password_change_done.html  password_change_form.html
bots/bots/templatetags/: botsfilters.py
bots/requirements/: base.txt  extras.txt  lint.txt  linux.txt  test.txt  win.txt  win32.txt
bots/scripts/: bots-jobqueueserver.sh  bots-webserverd.sh  bots_packaging.py  postinstall-bots-win.py  profile-engine.py
bots/tests/: __init__.py  unit_multi_1.py  unitconfirm.py  uniterrorcharsets.py  unitfilenameout.py  unitformats.py  unitgrammar.py  unitinisout.py  unitnode.py  unitretry.py  unittranslateutils.py  unittranslateutils2.py  uniturl.py  utilsunit.py
(+19031 files in other folders)
