[project]
name = "bots-ediint"
dynamic = ["version"]
description = "attr: bots.__about__.__summary__"
authors = [
    {name = "attr: bots.__about__.__author__", email = "attr: bots.__about__.__email__"},
]
dependencies = [
    "Cherrypy",
    "Django>=4",
    "cheroot!=11.0.*,!=11.1.1",
    "lxml",
    "pywin32; sys_platform == 'win32'",
    "pyinotify; sys_platform == 'linux' or sys_platform == 'linux2'",
    "pyasyncore; sys_platform == 'linux' or sys_platform == 'linux2'",
    "defusedxml>=0.7.1",
]
requires-python = ">=3.10, <4"
readme = "README.rst"
license = {text = "GNU General Public License (GPL v3.0)"}
keywords = [
    "edi edifact x12 tradacoms xml fixedfile csv json",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications",
    "Topic :: Office/Business",
    "Topic :: Office/Business :: Financial",
    "Topic :: Other/Nonlisted Topic",
]

[project.urls]
Homepage = "attr: bots.__about__.__url__"
"Bug Reports" = "https://gitlab.com/bots-ediint/bots/issues"

[project.optional-dependencies]
tools = [
    "Genshi",         # for using templates/mapping to HTML)
    "paramiko>=2",    # SFTP
    "pdfminer",       # parse pdf-files
    "xlrd",           # parse excel-files
]
testing = [
    "pytest",
    "pytest-cov",
    "pytest-django",
]

[project.scripts]
bots-configure = "bots.configure:start"
bots-dirmonitor = "bots.dirmonitor:start"
bots-engine = "bots.engine:start"
bots-engine2 = "bots.engine2:start"
bots-grammarcheck = "bots.grammarcheck:start"
bots-job2queue = "bots.job2queue:start"
bots-jobqueueserver = "bots.jobqueueserver:start"
bots-updatedb = "bots.botsupdatedb:start"
bots-webserver = "bots.webserver:start"
bots-xml2botsgrammar = "bots.xml2botsgrammar:start"
bots-plugoutindex = "bots.plugmanager:plugoutindex"
bots-index2json = "bots.plugmanager:index2json"


[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "."
includes = ["bots"]
excludes = ["bots/botssys", "bots/config", "tests", "*.po"]

[tool.pdm.version]
source = "scm"
version_format = "scripts.bots_packaging:format_version"
fallback_version = "4.0.0a3+fallback"


[tool.black]
line-length = 120
target-version = ["py310"]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--verbose --capture=no"
testpaths = [
    "tests",
]
python_files = [
#   "tests/unit*.py",
    "tests/uniterrorcharsets.py",
    "tests/uniturl.py",
#   "tests/unitformats.py",
#   "tests/unitgrammar.py",
#   "tests/unitnode.py",
#   "tests/unitconfirm.py",
]

